--- a/src/app/(protected)/artwall/upload/editor-styles.css
+++ b/src/app/(protected)/artwall/upload/editor-styles.css
@@ -46,11 +46,35 @@
 .editor-content ol {
     margin-bottom: 1rem;
     padding-left: 1.5rem;
+    list-style-position: outside;
+}
+
+.editor-content ul {
+    list-style-type: disc;
+}
+
+.editor-content ol {
+    list-style-type: decimal;
+}
+
+.editor-content ul ul {
+    list-style-type: circle;
+    margin-top: 0.5rem;
+}
+
+.editor-content ol ol {
+    list-style-type: lower-alpha;
+    margin-top: 0.5rem;
 }
 
 .editor-content li {
     margin-bottom: 0.5rem;
     line-height: 1.6;
+    display: list-item;
+}
+
+.editor-content li:last-child {
+    margin-bottom: 0;
 }
 
 .editor-content blockquote {
@@ -135,6 +159,39 @@
     margin-top: 2rem;
     margin-bottom: 1rem;
     line-height: 1.25;
+}
+
+.prose-custom ul,
+.prose-custom ol {
+    margin: 1rem 0;
+    padding-left: 1.5rem;
+    list-style-position: outside;
+}
+
+.prose-custom ul {
+    list-style-type: disc;
+}
+
+.prose-custom ol {
+    list-style-type: decimal;
+}
+
+.prose-custom ul ul {
+    list-style-type: circle;
+}
+
+.prose-custom ol ol {
+    list-style-type: lower-alpha;
+}
+
+.prose-custom li {
+    margin-bottom: 0.5rem;
+    line-height: 1.6;
+    display: list-item;
+}
+
+.prose-custom li:last-child {
+    margin-bottom: 0;
 }
 
 .prose-custom blockquote {
